# wordfish-python

./: LICENSE  LICENSE.txt  MANIFEST.in  README.md  install.sh  requirements.txt  run.py  setup.cfg  setup.py
deepdive/: browser.py  corpus.py  database.py  interface.py  nlp.py  plugin.py  terms.py  utils.py  vm.py
deepdive/scripts/: README.md
deepdive/standards/owl/: functions.py
deepdive/standards/xml/: functions.py
deepdive/static/css/: style.css
deepdive/template/: slurm.py
deepdive/templates/: index.html  plugins.html
doc/: README.md
example/: neurosynth_nlp.py
wordfish/: analysis.py  browser.py  corpus.py  database.py  interface.py  models.py  nlp.py  parser.py  plugin.py  terms.py  utils.py  version.py  vm.py
wordfish/plugins/: README.md
wordfish/scripts/: README.md  run_analysis.py  run_slurm.py
wordfish/standards/: README.md
wordfish/standards/xml/: functions.py
wordfish/static/css/: form-elements.css  style.css
wordfish/static/img/backgrounds/: bg.xcf
wordfish/static/js/: d3.v3.js  placeholder.js  scripts.js
wordfish/templates/: complete.html  index.html  init.sh  plugins.html  word2vec.html
