[metadata]
name = wordfish
version = 1.1.2
author = Vanessa Sochat
author-email = vsochat@stanford.edu
summary = Infrastructure for finding relationships between terms in corpus of interest.
description-file =
    README.md
home-page = http://www.github.com/word-fish/wordfish-python
requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    wordfish
extra_files =
    README.md
    LICENSE
